--- a/rails/locale/ru.yml
+++ b/rails/locale/ru.yml
@@ -1,19 +1,13 @@
-# Russian localization for Ruby on Rails 2.2+
+# Russian localization for Ruby on Rails 3.0+
 # by Yaroslav Markin <yaroslav@markin.net>
-# updated by Pavel Chipiga http://github.com/chipiga
-#
-# Be sure to check out "russian" gem (http://github.com/yaroslav/russian) for
-# full Russian language support in Rails (month names, pluralization, etc). 
-# The following is an excerpt from that gem.
-#
-# Для полноценной поддержки русского языка (варианты названий месяцев, 
-# плюрализация и так далее) в Rails 2.2 нужно использовать gem "russian" 
-# (http://github.com/yaroslav/russian). Следующие данные -- выдержка их него, чтобы
-# была возможность минимальной локализации приложения на русский язык.
+# and Pavel Chipiga http://github.com/chipiga
 
 ru:
   date:
     formats:
+      # Use the strftime parameters for formats.
+      # When no format has been given, it uses default.
+      # You can provide other formats here if you like!
       default: "%d.%m.%Y"
       short: "%d %b"
       long: "%d %B %Y"
@@ -22,12 +16,13 @@ ru:
     standalone_day_names: [Воскресенье, Понедельник, Вторник, Среда, Четверг, Пятница, Суббота]
     abbr_day_names: [Вс, Пн, Вт, Ср, Чт, Пт, Сб]
 
+    # Don't forget the nil at the beginning; there's no such thing as a 0th month
     month_names: [~, января, февраля, марта, апреля, мая, июня, июля, августа, сентября, октября, ноября, декабря]
     # see russian gem for info on "standalone" day names
     standalone_month_names: [~, Январь, Февраль, Март, Апрель, Май, Июнь, Июль, Август, Сентябрь, Октябрь, Ноябрь, Декабрь]
     abbr_month_names: [~, янв., февр., марта, апр., мая, июня, июля, авг., сент., окт., нояб., дек.]
     standalone_abbr_month_names: [~, янв., февр., март, апр., май, июнь, июль, авг., сент., окт., нояб., дек.]
-
+    # Used in date_select and datetime_select.
     order: [ :day, :month, :year ]
 
   time:
@@ -35,40 +30,75 @@ ru:
       default: "%a, %d %b %Y, %H:%M:%S %z"
       short: "%d %b, %H:%M"
       long: "%d %B %Y, %H:%M"
-
     am: "утра"
     pm: "вечера"
 
+  # Used in array.to_sentence.
+  support:
+    array:
+      words_connector: ", "
+      two_words_connector: " и "
+      last_word_connector: " и "
+
   number:
+    # Used in number_with_delimiter()
+    # These are also the defaults for 'currency', 'percentage', 'precision', and 'human'
     format:
+      # Sets the separator between the units, for more precision (e.g. 1.0 / 2.0 == 0.5)
       separator: "."
+      # Delimets thousands (e.g. 1,000,000 is a million) (always in groups of three)
       delimiter: " "
+      # Number of decimals, behind the separator (the number 1 with a precision of 2 gives: 1.00)
       precision: 3
-      
+      # If set to true, precision will mean the number of significant digits instead
+      # of the number of decimal digits (1234 with precision 2 becomes 1200, 1.23543 becomes 1.2)
+      significant: false
+      # If set, the zeros after the decimal separator will always be stripped (eg.: 1.200 will be 1.2)
+      strip_insignificant_zeros: false
+
+    # Used in number_to_currency()
     currency:
       format:
+        # Where is the currency sign? %u is the currency unit, %n the number (default: $5.00)
         format: "%n %u"
         unit: "руб."
+        # These five are to override number.format and are optional
         separator: "."
         delimiter: " "
         precision: 2
-        
+        significant: false
+        strip_insignificant_zeros: false
+
+    # Used in number_to_percentage()
     percentage:
       format:
+        # These five are to override number.format and are optional
+        # separator:
         delimiter: ""
-        
+        # precision:
+        # significant: false
+        # strip_insignificant_zeros: false
+
+    # Used in number_to_precision()
     precision:
       format:
+        # These five are to override number.format and are optional
+        # separator:
         delimiter: ""
-        
+        # precision:
+        # significant: false
+        # strip_insignificant_zeros: false
+
+    # Used in number_to_human_size() and number_to_human()
     human:
       format:
+        # These five are to override number.format and are optional
+        # separator:
         delimiter: ""
         precision: 1
-      # Rails 2.2
-      # storage_units: [байт, КБ, МБ, ГБ, ТБ]
-
-      # Rails 2.3
+        significant: true
+        strip_insignificant_zeros: true
+      # Used in number_to_human_size()
       storage_units:
         # Storage units output formatting.
         # %u is the storage unit, %n is the number (default: 2 MB)
@@ -83,7 +113,35 @@ ru:
           mb: "МБ"
           gb: "ГБ"
           tb: "ТБ"
+      # Used in number_to_human()
+      decimal_units:
+        format: "%n %u"
+        # Decimal units output formatting
+        # By default we will only quantify some of the exponents
+        # but the commented ones might be defined or overridden
+        # by the user.
+        units:
+          # femto: Фемто
+          # pico: Пико
+          # nano: Нано
+          # micro: Микро
+          # mili: Милли
+          # centi: Санти
+          # deci: Деци
+          unit: ""
+          # ten:
+          #   one: Десяток
+          #   few: Десятков
+          #   many: Десятков
+          #   other: Десятков
+          # hundred: Сотня
+          thousand: "Тысяча"
+          million: "Миллион"
+          billion: "Миллиард"
+          trillion: "Триллион"
+          quadrillion: "Квадриллион"
 
+  # Used in distance_of_time_in_words(), distance_of_time_in_words_to_now(), time_ago_in_words()
   datetime:
     distance_in_words:
       half_a_minute: "меньше минуты"
@@ -150,67 +208,92 @@ ru:
       minute: "Минут"
       second: "Секунд"
 
-  support:
+  helpers:
     select:
       # default value for :prompt => true in FormOptionsHelper
       prompt: "Выберите: "
 
+    # Default translation keys for submit FormHelper
+    submit:
+      create: 'Создать %{model}'
+      update: 'Обновить %{model}'
+      submit: 'Сохранить %{model}'
+
+  # Attributes names common to most models
+  #attributes:
+    #created_at: "Создано в"
+    #updated_at: "Обновлено в"
+
+  # Active Record models configuration
   activerecord:
     errors:
-      template:
-        header:
-          one:   "%{model}: сохранение не удалось из-за %{count} ошибки"
-          few:   "%{model}: сохранение не удалось из-за %{count} ошибок"
-          many:  "%{model}: сохранение не удалось из-за %{count} ошибок"
-          other: "%{model}: сохранение не удалось из-за %{count} ошибки"
-
-        body: "Проблемы возникли со следующими полями:"
-
       messages:
-        inclusion: "имеет непредусмотренное значение"
-        exclusion: "имеет зарезервированное значение"
-        invalid: "имеет неверное значение"
-        confirmation: "не совпадает с подтверждением"
-        accepted: "нужно подтвердить"
-        empty: "не может быть пустым"
-        blank: "не может быть пустым"
-        too_long:
-          one:   "слишком большой длины (не может быть больше чем %{count} символ)"
-          few:   "слишком большой длины (не может быть больше чем %{count} символа)"
-          many:  "слишком большой длины (не может быть больше чем %{count} символов)"
-          other: "слишком большой длины (не может быть больше чем %{count} символа)"
-        too_short:
-          one:   "недостаточной длины (не может быть меньше %{count} символа)"
-          few:   "недостаточной длины (не может быть меньше %{count} символов)"
-          many:  "недостаточной длины (не может быть меньше %{count} символов)"
-          other: "недостаточной длины (не может быть меньше %{count} символа)"
-        wrong_length:
-          one:   "неверной длины (может быть длиной ровно %{count} символ)"
-          few:   "неверной длины (может быть длиной ровно %{count} символа)"
-          many:  "неверной длины (может быть длиной ровно %{count} символов)"
-          other: "неверной длины (может быть длиной ровно %{count} символа)"
         taken: "уже существует"
-        not_a_number: "не является числом"
-        greater_than: "может иметь значение большее %{count}"
-        greater_than_or_equal_to: "может иметь значение большее или равное %{count}"
-        equal_to: "может иметь лишь значение, равное %{count}"
-        less_than: "может иметь значение меньшее чем %{count}"
-        less_than_or_equal_to: "может иметь значение меньшее или равное %{count}"
-        odd: "может иметь лишь четное значение"
-        even: "может иметь лишь нечетное значение"
         record_invalid: "Возникли ошибки: %{errors}"
-        
-      full_messages:
-        format: "%{attribute} %{message}"
-        
+        # Append your own errors here or at the model/attributes scope.
 
-  support:
-    array:
-      # Rails 2.2
-      sentence_connector: "и"
-      skip_last_comma: true
-      
-      # Rails 2.3
-      words_connector: ", "
-      two_words_connector: " и "
-      last_word_connector: " и "
+      # You can define own errors for models or model attributes.
+      # The values :model, :attribute and :value are always available for interpolation.
+      #
+      # For example,
+      #   models:
+      #     user:
+      #       blank: "Это специальное пустое сообщение для %{model}: %{attribute}"
+      #       attributes:
+      #         login:
+      #           blank: "Это специальное пустое сообщение для входа пользователя"
+      # Will define custom blank validation message for User model and 
+      # custom blank validation message for login attribute of User model.
+      #models:
+
+    # Translate model names. Used in Model.human_name().
+    #models:
+      # For example,
+      #   user: "Чувак"
+      # will translate User model name to "Чувак"
+
+    # Translate model attribute names. Used in Model.human_attribute_name(attribute).
+    #attributes:
+      # For example,
+      #   user:
+      #     login: "Обработать"
+      # will translate User attribute "login" as "Обработать"
+
+  errors:
+    # The default format to use in full error messages.
+    format: "%{attribute} %{message}"
+
+    # The values :model, :attribute and :value are always available for interpolation
+    # The value :count is available when applicable. Can be used for pluralization.
+    messages:
+      inclusion: "имеет непредусмотренное значение"
+      exclusion: "имеет зарезервированное значение"
+      invalid: "имеет неверное значение"
+      confirmation: "не совпадает с подтверждением"
+      accepted: "нужно подтвердить"
+      empty: "не может быть пустым"
+      blank: "не может быть пустым"
+      too_long:
+        one:   "слишком большой длины (не может быть больше чем %{count} символ)"
+        few:   "слишком большой длины (не может быть больше чем %{count} символа)"
+        many:  "слишком большой длины (не может быть больше чем %{count} символов)"
+        other: "слишком большой длины (не может быть больше чем %{count} символа)"
+      too_short:
+        one:   "недостаточной длины (не может быть меньше %{count} символа)"
+        few:   "недостаточной длины (не может быть меньше %{count} символов)"
+        many:  "недостаточной длины (не может быть меньше %{count} символов)"
+        other: "недостаточной длины (не может быть меньше %{count} символа)"
+      wrong_length:
+        one:   "неверной длины (может быть длиной ровно %{count} символ)"
+        few:   "неверной длины (может быть длиной ровно %{count} символа)"
+        many:  "неверной длины (может быть длиной ровно %{count} символов)"
+        other: "неверной длины (может быть длиной ровно %{count} символа)"
+      not_a_number: "не является числом"
+      not_an_integer: "не является целым числом"
+      greater_than: "может иметь значение большее %{count}"
+      greater_than_or_equal_to: "может иметь значение большее или равное %{count}"
+      equal_to: "может иметь лишь значение, равное %{count}"
+      less_than: "может иметь значение меньшее чем %{count}"
+      less_than_or_equal_to: "может иметь значение меньшее или равное %{count}"
+      odd: "может иметь лишь четное значение"
+      even: "может иметь лишь нечетное значение"
